--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,24 @@
 --- #YAML:1.0
-name:                DateTime-Set
-version:             0.28
-abstract:            DateTime set objects
-license:             ~
-author:              
+name:               DateTime-Set
+version:            0.29
+abstract:           DateTime set objects
+author:
     - Flavio S. Glock <fglock@pucrs.br>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    DateTime:                      0.12
-    Set::Infinite:                 0.59
-    Test::More:                    0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    DateTime:       0.12
+    Set::Infinite:  0.59
+    Test::More:     0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
