Import of FGLOCK/DateTime-Set-0.32 from CPAN.
gitpan-cpan-distribution: DateTime-Set
gitpan-cpan-version:      0.32
gitpan-cpan-path:         FGLOCK/DateTime-Set-0.32.tar.gz
gitpan-cpan-author:       FGLOCK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,24 @@
---- #YAML:1.0
-name:               DateTime-Set
-version:            0.31
-abstract:           DateTime set objects
+---
+abstract: 'DateTime set objects'
 author:
-    - Flavio S. Glock <fglock@gmail.com>
-license:            unknown
-distribution_type:  module
+  - 'Flavio S. Glock <fglock@gmail.com>'
+build_requires:
+  ExtUtils::MakeMaker: 0
 configure_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    DateTime:       0.12
-    Set::Infinite:  0.59
-    Test::More:     0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: DateTime-Set
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  DateTime: 0.12
+  Set::Infinite: 0.59
+  Test::More: 0
+version: 0.32
